feat(search): added footprint search api
