# docs/openapi3.yaml
@@ -57,6 +57,23 @@ paths:
           description: ""
       tags:
         - images
+  "/images/search":
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/searchOptions"
+      responses:
+        "200":
+          description: "list of matching image metadatas"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/searchResponse"
+      tags:
+        - images
 components:
   parameters:
     idParam:
@@ -67,3 +84,30 @@ components:
       schema:
         type: string
         format: uuid
+  schemas:
+    searchOptions:
+      type: object
+      properties:
+        footprint:
+          type: object
+          oneOf:
+            - $ref: "http://localhost/Schema/geojson/Point.json"
+            - $ref: "http://localhost/Schema/geojson/Polygon.json"
+          example: {
+              "type": "Point",
+              "coordinates": [125.6, 10.1]
+            }
+    searchResponse:
+      allof:
+        - $ref: "http://localhost/Schema/Http/ApiHttpResponse.base.json#/definitions/ApiHttpResponse"
+        - $ref: "#/components/schemas/searchResponseData"
+    searchResponseData:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            matchingImages:
+              type: array
+              items:
+                $ref: "http://localhost/Schema/ImageMetadata/ImageMetadata.base.json"
